--- a/templates/dashboards/sales/main.html
+++ b/templates/dashboards/sales/main.html
@@ -237,13 +237,13 @@
                         <a class="nav-link active" href="#"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/sales/sell"><i class="bi bi-graph-up me-2"></i>Sell</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi bi-people me-2"></i>Customers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi bi-cart me-2"></i>Orders</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="bi bi-graph-up me-2"></i>Performance</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi bi-calendar-event me-2"></i>Calendar</a>
@@ -271,14 +271,12 @@
                     </div>
                     <div class="dropdown profile-menu">
                         <button class="btn dropdown-toggle d-flex align-items-center" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
-                            <img src="/api/placeholder/100/100" alt="profile" class="me-2">
-                            <span class="d-none d-md-inline">Sales Manager</span>
+                            <!-- <img src="/api/placeholder/100/500" alt="profile" class="me-2"> -->
+                            <span class="d-none d-md-inline">{{ session.get('username', 'Sales Manager') }}
+                            </span>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="bi bi-person me-2"></i>Profile</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="bi bi-gear me-2"></i>Settings</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#"><i class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
+                            <li><a class="dropdown-item" href="/logout"><i class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
                         </ul>
                     </div>
                 </div>
