--- a/templates/dashboards/sales/main.html
+++ b/templates/dashboards/sales/main.html
@@ -243,7 +243,7 @@
                         <a class="nav-link" href="#"><i class="bi bi-people me-2"></i>Customers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="bi bi-cart me-2"></i>Orders</a>
+                        <a class="nav-link" href="#"><i class="bi bi-cart add"></i>Add</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi bi-calendar-event me-2"></i>Calendar</a>
